--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,6 +35,14 @@ play.i18n.langs = [ "en" ]
 # db.default.username=sa
 # db.default.password=""
 
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/open_micro_dmp?characterEncoding=UTF8"
+db.default.username=root
+db.default.password=""
+
+play.db.pool=bonecp
+
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
